--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kaltim.report.public">
+    package="com.kaltim.report">
    <application
         android:label="kaltim_report"
         android:icon="@mipmap/ic_launcher">
