--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   cloud_firestore: ^3.1.6
   firebase_auth: ^3.3.5
   firebase_core: ^1.11.0
+  google_sign_in: ^5.2.3
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
