--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   firebase_core: ^1.11.0
   google_sign_in: ^5.2.3
 
+  #json
+  json_serializable: ^6.1.4
+
 dev_dependencies:
   auto_route_generator: ^3.2.1
   build_runner: ^2.1.7
