--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   #state management
-  get: ^4.6.1
   get_it: ^7.2.0
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
@@ -42,8 +41,10 @@ dependencies:
   #UI
   carousel_slider: ^4.0.0
   dots_indicator: ^2.0.0
+  fluttertoast: ^8.0.8
   form_field_validator: ^1.1.0
   google_fonts: ^2.2.0
+  iconsax: ^0.0.8
   ionicons: ^0.1.2
   sizer: ^2.0.15
 
@@ -55,6 +56,7 @@ dependencies:
 
   #json
   json_serializable: ^6.1.4
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
