--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,7 +47,9 @@ dependencies:
   form_field_validator: ^1.1.0
   google_fonts: ^2.2.0
   iconsax: ^0.0.8
+  intl: ^0.17.0
   ionicons: ^0.1.2
+  url_launcher: ^6.0.18
   sizer: ^2.0.15
 
   #firebase
