--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
     package="com.kaltim.report">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
@@ -18,7 +20,7 @@
         </intent>
     </queries>
     <application
-        android:label="kaltim_report"
+        android:label="SIGAP"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -54,5 +56,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA2v6nwWdaXyRC_2hHzr_yBFzLPPGu9PY4"/>
     </application>
 </manifest>
