fix error upload report form

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,8 @@ dependencies:
   cloud_firestore: ^3.1.6
   firebase_auth: ^3.3.5
   firebase_core: ^1.11.0
+  firebase_storage: ^10.2.5
   google_sign_in: ^5.2.3
-  nanoid: ^1.0.0
 
   #json
   json_serializable: ^6.1.4
