add pagination to report screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   #state management
   get_it: ^7.2.0
-  flutter_bloc: ^8.0.1
+  flutter_bloc: ^7.3.3
   equatable: ^2.0.3
   injectable: ^1.5.3
 
@@ -44,15 +44,18 @@ dependencies:
   another_flushbar: ^1.10.28
   carousel_slider: ^4.0.0
   dots_indicator: ^2.0.0
+  flutterfire_ui: ^0.3.1
   fluttertoast: ^8.0.8
   form_field_validator: ^1.1.0
   google_fonts: ^2.2.0
   iconsax: ^0.0.8
+  infinite_scroll_pagination: ^3.1.0
   intl: ^0.17.0
   ionicons: ^0.1.2
   url_launcher: ^6.0.18
   skeletons: ^0.0.3
   sizer: ^2.0.15
+
 
   #firebase
   cloud_firestore: ^3.1.6
@@ -60,6 +63,7 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_storage: ^10.2.5
   google_sign_in: ^5.2.3
+  paginate_firestore: ^1.0.3
 
   #json
   json_serializable: ^6.1.4
