--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
 dev_dependencies:
   auto_route_generator: ^3.2.1
   build_runner: ^2.1.7
+  copy_with_extension_gen: ^4.0.0
   flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
