--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,10 @@ dependencies:
   cloud_firestore: ^3.1.6
   firebase_auth: ^3.3.5
   firebase_core: ^1.11.0
+  firebase_crashlytics: ^2.5.2
+  firebase_messaging: ^11.2.7
   firebase_storage: ^10.2.5
+  firebase_performance: ^0.8.0+6
   google_sign_in: ^5.2.3
 
   #json
