--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,4 +95,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-perf'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
