--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   #firebase
   cloud_firestore: ^3.1.6
   firebase_auth: ^3.3.5
+  firebase_analytics: ^9.1.1
   firebase_core: ^1.11.0
   firebase_crashlytics: ^2.5.2
   firebase_messaging: ^11.2.7
