--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   url_launcher: ^6.0.18
   skeletons: ^0.0.3
   sizer: ^2.0.15
+  webview_flutter: ^3.0.1
 
 
   #firebase
@@ -80,9 +81,12 @@ dependencies:
   copy_with_extension: ^4.0.0
   image_picker: ^0.8.4+4
   package_info_plus: ^1.3.0
-  permission_handler: ^8.3.0
+  permission_handler: ^9.2.0
   universal_platform: ^1.0.0+1
   flutter_native_splash: ^2.1.1
+
+  #http
+  dio: ^4.0.4
   
 dev_dependencies:
   auto_route_generator: ^3.2.1
