--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,19 +89,21 @@ dependencies:
   dio: ^4.0.4
   
 dev_dependencies:
-  auto_route_generator: ^3.2.1
-  build_runner: ^2.1.7
-  copy_with_extension_gen: ^4.0.0
-  flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
+  auto_route_generator: ^3.2.1
+  build_runner: ^2.1.7
+  flutter_gen_runner: ^4.1.6
+  copy_with_extension_gen: ^4.0.0
+  flutter_lints: ^1.0.4
   lints: ^1.0.1
   injectable_generator: ^1.5.3
   change_app_package_name: ^1.0.0
   flutter_launcher_icons: ^0.9.2
   
   
-
+flutter_gen:
+    output: lib/constant/
 # flutter_icons:
 #   android: true
 #   ios: true
