--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,15 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    - lib/**.g.dart
+    - lib/**.gen.dart
+    - test/**.mocks.dart
+    - lib/**.config.dart
+    - lib/generated_plugin_registrant.dart
+    - lib/**.mocks.dart
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
