update app adding some remote config & remote api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   firebase_messaging: ^11.2.7
   firebase_storage: ^10.2.5
   firebase_performance: ^0.8.0+6
+  firebase_remote_config: ^2.0.1
   google_sign_in: ^5.2.3
 
   #json
@@ -88,6 +89,8 @@ dependencies:
 
   #http
   dio: ^4.0.4
+  shared_preferences: ^2.0.13
+  connectivity_plus: ^2.2.1
   
 dev_dependencies:
   flutter_test:
