--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,21 +33,21 @@ dependencies:
 
   #state management
   get_it: ^7.2.0
-  flutter_bloc: ^7.3.3
+  flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   injectable: ^1.5.3
 
   #routes
-  auto_route: ^3.2.1
+  auto_route: ^4.0.1
 
   #UI
   another_flushbar: ^1.10.28
   carousel_slider: ^4.0.0
   dots_indicator: ^2.0.0
-  flutterfire_ui: ^0.3.1
+  flutterfire_ui: ^0.4.1+2
   fluttertoast: ^8.0.8
   form_field_validator: ^1.1.0
-  google_fonts: ^2.2.0
+  google_fonts: ^3.0.1
   iconsax: ^0.0.8
   infinite_scroll_pagination: ^3.1.0
   intl: ^0.17.0
@@ -95,12 +95,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  auto_route_generator: ^3.2.1
+  auto_route_generator: ^4.0.0
   build_runner: ^2.1.7
   flutter_gen_runner: ^4.1.6
   copy_with_extension_gen: ^4.0.0
-  flutter_lints: ^1.0.4
-  lints: ^1.0.1
+  flutter_lints: ^2.0.1
+  lints: ^2.0.0
   injectable_generator: ^1.5.3
   change_app_package_name: ^1.0.0
   flutter_launcher_icons: ^0.9.2
