--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,10 +84,13 @@ dependencies:
   copy_with_extension: ^4.0.0
   image_picker: ^0.8.4+4
   package_info_plus: ^1.3.0
-  permission_handler: ^10.0.0
+  permission_handler: ^9.2.0
   universal_platform: ^1.0.0+1
   flutter_native_splash: ^2.1.1
   collection: ^1.16.0
+  csv: ^5.0.1
+  path_provider: ^2.0.11
+  excel: ^2.0.0-null-safety-3
 
   #bloc testing
   mockito: ^5.0.16
