--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,7 @@ dependencies:
   share_plus: ^4.0.2
   syncfusion_flutter_charts: ^20.1.59
   photo_view: ^0.14.0
-
-
+  flutter_chat_bubble: ^2.0.0
 
   #firebase
   cloud_firestore: ^3.1.6
